yet another try to integrate sparkle.framework updates for macOS

--- a/.github/workflows/ci_codesign-macos.yml
+++ b/.github/workflows/ci_codesign-macos.yml
@@ -292,6 +292,8 @@ jobs:
                 <true/>
                 <key>com.apple.security.files.downloads.read-write</key>
                 <true/>
+                <key>com.apple.security.app-sandbox</key>
+                <false/>
             </dict>
             </plist>
             EOF
