chore: update GitHub Actions and workflows
- Added daily updates for GitHub Actions in dependabot configuration.
- Updated actions/checkout to a specific SHA across multiple workflows.
- Updated actions/setup-dotnet, actions/setup-java, actions/setup-node, and pnpm/action-setup to specific SHAs.
- Refactored CI workflows to use composite actions for building frontend and backend.
- Enhanced package-app action to build and upload artifacts for releases.
- Updated artifact upload and download actions to specific SHAs.
- Added README for composite actions detailing usage and design principles.
- Introduced pin-action-shas.sh script to assist in resolving action tags to commit SHAs.
- Updated various workflows to improve structure and maintainability.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -41,3 +41,12 @@ updates:
     commit-message:
       prefix: "deps"
     open-pull-requests-limit: 5
+    
+  # Update GitHub Actions used in workflows (pins / action refs)
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "daily"
+    commit-message:
+      prefix: "deps"
+    open-pull-requests-limit: 10
