--- a/.github/workflows/ci_backend.yml
+++ b/.github/workflows/ci_backend.yml
@@ -22,7 +22,7 @@ jobs:
       LinearAPIKey: ${{ secrets.LINEARAPIKEY }}
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5
       with:
         fetch-depth: '0'
 
@@ -31,12 +31,12 @@ jobs:
         rm ./Lighthouse.Frontend/sonar-project.properties
 
     - name: Setup .NET
-      uses: actions/setup-dotnet@v3
+      uses: actions/setup-dotnet@55ec9447dda3d1cf6bd587150f3262f30ee10815
       with:
         dotnet-version: ${{ inputs.dotnet_version }}
 
     - name: Set up JDK 17
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@17f84c3641ba7b8f6deff6309fc4c864478f5d62
       with:
         java-version: 17
         distribution: 'zulu'
@@ -56,10 +56,13 @@ jobs:
       run: |
         dotnet sonarscanner begin /k:"LetPeopleWork_Lighthouse" /o:"letpeoplework" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.cs.opencover.reportsPaths="**/TestResults/**/coverage.opencover.xml" /d:sonar.cs.vstest.reportsPaths="**/TestResults/*.trx" /d:sonar.exclusions="**/Lighthouse.Migrations.Sqlite/**/*,**/Lighthouse.Migrations.Postgres/**/*,**/Lighthouse.Frontend/**/*,**/Lighthouse.EndToEndTests/**/*,**/.github/**/*,**/.vscode/**/*,**/docs/**/*"
 
-    - name: Build and test
-      run: |
-        dotnet build ./Lighthouse.Backend
+    - name: Build Backend (composite)
+      uses: ./.github/actions/build-backend
+      with:
+        publish: 'false'
 
+    - name: Test Backend
+      run: |
         dotnet test ./Lighthouse.Backend --logger trx --collect:"XPlat Code Coverage" -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=opencover
 
     - name: End SonarCloud analysis
