--- a/.github/workflows/ci_release.yml
+++ b/.github/workflows/ci_release.yml
@@ -23,12 +23,12 @@ jobs:
       id-token: write
     
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5
         with:
           fetch-depth: '0'
       
       - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v2
+        uses: docker/login-action@465a07811f14bebb1938fbed4728c6a1ff8901fc
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -43,7 +43,7 @@ jobs:
       
           # Install Cosign
       - name: Install Cosign
-        uses: sigstore/cosign-installer@v3.5.0
+        uses: sigstore/cosign-installer@59acb6260d9c0ba8f4a2f9d9b48431a222b68e20
       
         # Sign the image using keyless signing (GitHub OIDC)
       - name: Sign Docker image with Cosign
@@ -58,32 +58,32 @@ jobs:
           cosign verify --certificate-identity="https://github.com/LetPeopleWork/Lighthouse/.github/workflows/ci_release.yml@refs/heads/main" --certificate-oidc-issuer="https://token.actions.githubusercontent.com" ghcr.io/$REPO_NAME:${{ inputs.fileversion }}
           cosign verify --certificate-identity="https://github.com/LetPeopleWork/Lighthouse/.github/workflows/ci_release.yml@refs/heads/main" --certificate-oidc-issuer="https://token.actions.githubusercontent.com" ghcr.io/$REPO_NAME:latest
       
-      - uses: actions/download-artifact@v4
+      - uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093
         with:
           name: Lighthouse-win-x64-${{ inputs.version }}
           path: LighthouseArtifacts/win-x64
           
-      - uses: actions/download-artifact@v4
+      - uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093
         with:
           name: Lighthouse-osx-dmg-${{ inputs.version }}
           path: LighthouseArtifacts/osx-dmg
 
-      - uses: actions/download-artifact@v4
+      - uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093
         with:
           name: Lighthouse-osx-app-${{ inputs.version }}
           path: LighthouseArtifacts/osx-app
 
-      - uses: actions/download-artifact@v4
+      - uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093
         with:
           name: Lighthouse-linux-x64-${{ inputs.version }}
           path: LighthouseArtifacts/linux-x64
 
-      - uses: vimtor/action-zip@v1.2
+      - uses: vimtor/action-zip@1379ea20d4c5705669ba81fd626dd01b1c738f26
         with:
           files: LighthouseArtifacts/win-x64
           dest: Lighthouse-win-x64.zip
 
-      - uses: vimtor/action-zip@v1.2
+      - uses: vimtor/action-zip@1379ea20d4c5705669ba81fd626dd01b1c738f26
         with:
           files: LighthouseArtifacts/linux-x64
           dest: Lighthouse-linux-x64.zip
@@ -93,7 +93,7 @@ jobs:
           cp LighthouseArtifacts/osx-dmg/Lighthouse-${{ inputs.version }}.dmg Lighthouse-osx.dmg
           cp LighthouseArtifacts/osx-app/Lighthouse-${{ inputs.version }}.app.zip Lighthouse-osx.app.zip
 
-      - uses: ncipollo/release-action@v1
+      - uses: ncipollo/release-action@b7eabc95ff50cbeeedec83973935c8f306dfcd0b
         with:
           artifacts: "Lighthouse-win-x64.zip,Lighthouse-osx.dmg,Lighthouse-osx.app.zip,Lighthouse-linux-x64.zip"
           tag: ${{ inputs.version }}
