--- a/.github/workflows/ci_tag.yml
+++ b/.github/workflows/ci_tag.yml
@@ -26,7 +26,7 @@ jobs:
       fileversion: ${{ steps.process_version.outputs.fileversion }}
 
     steps:          
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5
         with:
           fetch-depth: '0'
       
