--- a/.github/workflows/ci_verifymacos.yml
+++ b/.github/workflows/ci_verifymacos.yml
@@ -17,7 +17,7 @@ jobs:
 
     steps:
       - name: Download signed DMG
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093
         with:
           name: Lighthouse-osx-dmg-${{ inputs.version }}
           path: ./publish
