--- a/.github/workflows/ci_verifywindows.yml
+++ b/.github/workflows/ci_verifywindows.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
       - name: Download signed Windows binary
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093
         with:
           name: Lighthouse-win-x64-${{ inputs.version }}
           path: ./publish
