--- a/.github/workflows/screenshots.yml
+++ b/.github/workflows/screenshots.yml
@@ -17,7 +17,7 @@ jobs:
     permissions: write-all
     
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5
         with:
           fetch-depth: '0'
 
@@ -52,7 +52,7 @@ jobs:
         working-directory: ./Lighthouse.EndToEndTests
         
       - name: Download Lighthouse Artifacts
-        uses: dawidd6/action-download-artifact@v6
+        uses: dawidd6/action-download-artifact@bf251b5aa9c2f7eeb574a96ee720e24f801b7c11
         with:
           github_token: ${{secrets.GITHUB_TOKEN}}
           workflow: ci.yml
@@ -119,7 +119,7 @@ jobs:
         shell: bash
 
       - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v6
+        uses: peter-evans/create-pull-request@c5a7806660adbe173f04e3e038b0ccdcd758773c
         with:
             token: ${{ secrets.GITHUB_TOKEN }}
             commit-message: "Update screenshots for version ${{ steps.version.outputs.VERSION }}"
@@ -138,7 +138,7 @@ jobs:
                 automated pr
             draft: false
 
-      - uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02
         if: ${{ !cancelled() }}
         with:
           name: playwright-report-screenshots
