chore: include GitHub actions directory in CI workflow triggers

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,7 @@ on:
       - "Lighthouse.EndToEndTests/**"
       - "Lighthouse.Frontend/**"
       - ".github/workflows/ci*.yml"
+      - ".github/actions/**"
       - "examples/postgres/**"
   pull_request:
     branches: [ "main" ]
