fix: update output paths for backend publish and adjust permissions for Linux artifacts

--- a/.github/actions/build-backend/action.yml
+++ b/.github/actions/build-backend/action.yml
@@ -39,10 +39,10 @@ runs:
       if: ${{ inputs.publish == 'true' }}
       shell: bash
       run: |
-        dotnet publish -c Release -r win-x64 --self-contained -p:PublishSingleFile=true -p:Version=${{ inputs.fileversion }} -o ./publish/win-x64 ./Lighthouse.Backend/Lighthouse.Backend
-        dotnet publish -c Release -r linux-x64 --self-contained -p:PublishSingleFile=true -p:Version=${{ inputs.fileversion }} -o ./publish/linux-x64 ./Lighthouse.Backend/Lighthouse.Backend
-        dotnet publish -c Release -r osx-x64 --self-contained -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfContained=true -p:Version=${{ inputs.fileversion }} -o ./publish/osx-x64 ./Lighthouse.Backend/Lighthouse.Backend
-        dotnet publish -c Release -r osx-arm64 --self-contained -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfContained=true -p:Version=${{ inputs.fileversion }} -o ./publish/osx-arm64 ./Lighthouse.Backend/Lighthouse.Backend
+        dotnet publish -c Release -r win-x64 --self-contained -p:PublishSingleFile=true -p:Version=${{ inputs.fileversion }} -o ./Lighthouse.Backend/Lighthouse.Backend/publish/win-x64 ./Lighthouse.Backend/Lighthouse.Backend
+        dotnet publish -c Release -r linux-x64 --self-contained -p:PublishSingleFile=true -p:Version=${{ inputs.fileversion }} -o ./Lighthouse.Backend/Lighthouse.Backend/publish/linux-x64 ./Lighthouse.Backend/Lighthouse.Backend
+        dotnet publish -c Release -r osx-x64 --self-contained -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfContained=true -p:Version=${{ inputs.fileversion }} -o ./Lighthouse.Backend/Lighthouse.Backend/publish/osx-x64 ./Lighthouse.Backend/Lighthouse.Backend
+        dotnet publish -c Release -r osx-arm64 --self-contained -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfContained=true -p:Version=${{ inputs.fileversion }} -o ./Lighthouse.Backend/Lighthouse.Backend/publish/osx-arm64 ./Lighthouse.Backend/Lighthouse.Backend
 
     - name: Remove development settings from published outputs
       if: ${{ inputs.publish == 'true' }}
@@ -50,4 +50,5 @@ runs:
       run: |
         rm -f ./Lighthouse.Backend/Lighthouse.Backend/publish/win-x64/appsettings.Development.json || true
         rm -f ./Lighthouse.Backend/Lighthouse.Backend/publish/linux-x64/appsettings.Development.json || true
-        rm -f ./publish/osx-universal/appsettings.Development.json || true
+        rm -f ./Lighthouse.Backend/Lighthouse.Backend/publish/osx-x64/appsettings.Development.json || true
+        rm -f ./Lighthouse.Backend/Lighthouse.Backend/publish/osx-arm64/appsettings.Development.json || true
