--- a/.github/workflows/ci_codesign-macos.yml
+++ b/.github/workflows/ci_codesign-macos.yml
@@ -223,7 +223,7 @@ jobs:
             ls -la "$RESOURCES_DIR"
 
         - name: Import code signing certificates
-          uses: apple-actions/import-codesign-certs@v6
+          uses: apple-actions/import-codesign-certs@7aba93a48fb485ac3f280066eb26d8b42c1bbb70
           with:
             p12-file-base64: ${{ secrets.APPLE_CERTIFICATE_BASE64 }}
             p12-password: ${{ secrets.APPLE_CERTIFICATE_PASSWORD }}
