--- a/.github/workflows/ci_verifysqlite.yml
+++ b/.github/workflows/ci_verifysqlite.yml
@@ -48,7 +48,7 @@ jobs:
         working-directory: ./Lighthouse.EndToEndTests
 
       - name: Setup Python
-        uses: actions/setup-python@v6
+        uses: actions/setup-python@83679a892e2d95755f2dac6acb0bfd1e9ac5d548
         with:
           python-version: '3.11'
 
