--- a/.github/workflows/updatedemoenv.yml
+++ b/.github/workflows/updatedemoenv.yml
@@ -23,7 +23,7 @@ jobs:
         fetch-depth: '0'
     
     - name: Set up Python
-      uses: actions/setup-python@v6
+      uses: actions/setup-python@83679a892e2d95755f2dac6acb0bfd1e9ac5d548
       with:
         python-version: '3.10'
     
