refactor: simplify ConfigurationController constructor and remove unused using directive test: update assertions in LicensingIntegrationTest for better readability test: change synchronous to asynchronous retrieval in WorkTrackingSystemConnectionRepositoryTest editorconfig: suppress CA1873 warning

--- a/Lighthouse.Backend/.editorconfig
+++ b/Lighthouse.Backend/.editorconfig
@@ -59,6 +59,8 @@ dotnet_diagnostic.IDE0056.severity = none
 # IDE0008: Use explicit type
 dotnet_diagnostic.IDE0008.severity = none
 
+dotnet_diagnostic.CA1873.severity = none
+
 [*.{cs,vb}]
 #### Naming styles ####
 
