Enhanced Data Retrieval Configuration
- Use specific labels per Work Tracking System to define "Data Retrieval" (JQL, WIQL, CSV Content)
- Introduce concept of "Wizards" per Work Tracking System
- Refactor File Upload for CSV to use new Wizard Concept

--- a/Lighthouse.Frontend/package.json
+++ b/Lighthouse.Frontend/package.json
@@ -1,67 +1,67 @@
 {
-  "name": "lighthouse.frontend",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "cross-env VITE_API_BASE_URL=http://localhost:5169/api vite",
-    "dev-demo": "cross-env VITE_API_SERVICE_TYPE=DEMO VITE_API_SERVICE_DELAY=TRUE pnpm run dev",
-    "build": "tsc -b && vite build --outDir ../Lighthouse.Backend/Lighthouse.Backend/wwwroot",
-    "build-docker": "tsc -b && vite build --outDir ./dist",
-    "build-demo": "cross-env VITE_API_SERVICE_TYPE=DEMO VITE_API_SERVICE_DELAY=TRUE vite build --outDir ../Lighthouse.Backend/Lighthouse.Backend/wwwroot",
-    "prebuild": "pnpm dlx @biomejs/biome check --write ./src",
-    "preview": "vite preview",
-    "test": "vitest --reporter=default",
-    "sonarreport": "vitest run --coverage"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
-    "@melloware/react-logviewer": "^6.3.4",
-    "@microsoft/signalr": "^10.0.0",
-    "@mui/icons-material": "^7.3.6",
-    "@mui/lab": "^7.0.0",
-    "@mui/material": "^7.3.6",
-    "@mui/system": "^7.3.6",
-    "@mui/x-charts": "8.11.3",
-    "@mui/x-data-grid": "^8.23.0",
-    "@mui/x-date-pickers": "8.11.3",
-    "@tanstack/react-query": "^5.90.16",
-    "axios": "^1.13.2",
-    "camelcase-keys": "^10.0.1",
-    "class-transformer": "^0.5.1",
-    "date-fns": "^4.1.0",
-    "dayjs": "^1.11.19",
-    "lodash.debounce": "^4.0.8",
-    "lorem-ipsum": "^2.0.8",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "react-markdown": "^10.1.0",
-    "react-router-dom": "^7.11.0",
-    "reflect-metadata": "^0.2.2",
-    "remark-gfm": "^4.0.1"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "2.3.10",
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.1",
-    "@testing-library/user-event": "^14.6.1",
-    "@types/date-fns": "^2.6.3",
-    "@types/lodash.debounce": "^4.0.9",
-    "@types/node": "^25.0.3",
-    "@types/react": "^19.2.7",
-    "@types/react-dom": "^19.2.3",
-    "@vitejs/plugin-react": "^5.1.2",
-    "@vitest/coverage-v8": "^4.0.14",
-    "@vitest/spy": "^4.0.16",
-    "cross-env": "^10.1.0",
-    "jsdom": "^27.4.0",
-    "parse5": "^8.0.0",
-    "typescript": "^5.9.3",
-    "vite": "^7.3.0",
-    "vite-plugin-pwa": "^1.2.0",
-    "vitest": "^4.0.10",
-    "vitest-sonar-reporter": "^3.0.0"
-  }
+	"name": "lighthouse.frontend",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "cross-env VITE_API_BASE_URL=http://localhost:5169/api vite",
+		"dev-demo": "cross-env VITE_API_SERVICE_TYPE=DEMO VITE_API_SERVICE_DELAY=TRUE pnpm run dev",
+		"build": "tsc -b && vite build --outDir ../Lighthouse.Backend/Lighthouse.Backend/wwwroot",
+		"build-docker": "tsc -b && vite build --outDir ./dist",
+		"build-demo": "cross-env VITE_API_SERVICE_TYPE=DEMO VITE_API_SERVICE_DELAY=TRUE vite build --outDir ../Lighthouse.Backend/Lighthouse.Backend/wwwroot",
+		"prebuild": "pnpm dlx @biomejs/biome check --write ./src",
+		"preview": "vite preview",
+		"test": "vitest run --reporter=default",
+		"sonarreport": "vitest run --coverage"
+	},
+	"dependencies": {
+		"@emotion/react": "^11.14.0",
+		"@emotion/styled": "^11.14.1",
+		"@melloware/react-logviewer": "^6.3.4",
+		"@microsoft/signalr": "^10.0.0",
+		"@mui/icons-material": "^7.3.6",
+		"@mui/lab": "^7.0.0",
+		"@mui/material": "^7.3.6",
+		"@mui/system": "^7.3.6",
+		"@mui/x-charts": "8.11.3",
+		"@mui/x-data-grid": "^8.23.0",
+		"@mui/x-date-pickers": "8.11.3",
+		"@tanstack/react-query": "^5.90.16",
+		"axios": "^1.13.2",
+		"camelcase-keys": "^10.0.1",
+		"class-transformer": "^0.5.1",
+		"date-fns": "^4.1.0",
+		"dayjs": "^1.11.19",
+		"lodash.debounce": "^4.0.8",
+		"lorem-ipsum": "^2.0.8",
+		"react": "^19.2.3",
+		"react-dom": "^19.2.3",
+		"react-markdown": "^10.1.0",
+		"react-router-dom": "^7.11.0",
+		"reflect-metadata": "^0.2.2",
+		"remark-gfm": "^4.0.1"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "2.3.10",
+		"@testing-library/dom": "^10.4.1",
+		"@testing-library/jest-dom": "^6.9.1",
+		"@testing-library/react": "^16.3.1",
+		"@testing-library/user-event": "^14.6.1",
+		"@types/date-fns": "^2.6.3",
+		"@types/lodash.debounce": "^4.0.9",
+		"@types/node": "^25.0.3",
+		"@types/react": "^19.2.7",
+		"@types/react-dom": "^19.2.3",
+		"@vitejs/plugin-react": "^5.1.2",
+		"@vitest/coverage-v8": "^4.0.14",
+		"@vitest/spy": "^4.0.16",
+		"cross-env": "^10.1.0",
+		"jsdom": "^27.4.0",
+		"parse5": "^8.0.0",
+		"typescript": "^5.9.3",
+		"vite": "^7.3.0",
+		"vite-plugin-pwa": "^1.2.0",
+		"vitest": "^4.0.10",
+		"vitest-sonar-reporter": "^3.0.0"
+	}
 }
